--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.1",
     "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/state": "^6.5.3",
+    "@codemirror/view": "^6.39.9",
+    "@lezer/highlight": "^1.2.3",
     "@milkdown/core": "^7.3.0",
     "@milkdown/ctx": "^7.3.0",
     "@milkdown/plugin-history": "^7.3.0",
@@ -22,9 +27,13 @@
     "@milkdown/theme-nord": "^7.3.0",
     "@replit/codemirror-minimap": "^0.5.2",
     "@replit/codemirror-vim": "^6.3.0",
-    "@tauri-apps/api": "^1.5.0",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
+    "@tauri-apps/plugin-shell": "^2.3.3",
     "@uiw/react-codemirror": "^4.25.4",
     "clsx": "^2.1.0",
+    "dompurify": "^3.3.1",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,7 +41,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
-    "@tauri-apps/cli": "^1.5.0",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
