--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,17 +6,16 @@ authors = ["you"]
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "window-all",
-    "shell-open",
-    "dialog-all",
-    "fs-all",
-    "path-all",
-] }
+comrak = "0.33"
+tauri = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-shell = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-dialog = "2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
