--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codemirror/commands": "^6.10.1",
     "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-rust": "^6.0.2",
     "@codemirror/language": "^6.12.1",
     "@codemirror/state": "^6.5.3",
     "@codemirror/view": "^6.39.9",
@@ -33,6 +34,7 @@
     "@tauri-apps/plugin-shell": "^2.3.3",
     "@uiw/react-codemirror": "^4.25.4",
     "clsx": "^2.1.0",
+    "codemirror-lang-typst": "^0.4.0",
     "dompurify": "^3.3.1",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
