--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "codemirror-lang-typst": "^0.4.0",
     "dompurify": "^3.3.1",
     "lucide-react": "^0.300.0",
+    "mermaid": "^11.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.0"
