--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "my-editor"
+name = "typoly"
 version = "0.0.0"
-description = "A Tauri App"
+description = "A modern hybrid editor"
 authors = ["you"]
 edition = "2021"
 
