--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+num_cpus = "1.0"
 comrak = "0.33.0"
 typst = "0.12.0"
 typst-svg = "0.12.0"
