--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "codemirror-lang-typst": "^0.4.0",
     "dompurify": "^3.3.1",
+    "html-to-image": "^1.11.13",
     "katex": "^0.16.27",
     "lucide-react": "^0.300.0",
     "mermaid": "^11.12.2",
