--- a/package.json
+++ b/package.json
@@ -11,9 +11,24 @@
   },
   "dependencies": {
     "@codemirror/commands": "^6.10.1",
+    "@codemirror/lang-cpp": "^6.0.3",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-go": "^6.0.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-java": "^6.0.2",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-php": "^6.0.2",
+    "@codemirror/lang-python": "^6.2.1",
     "@codemirror/lang-rust": "^6.0.2",
+    "@codemirror/lang-sass": "^6.0.2",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/lang-vue": "^0.1.3",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/lang-yaml": "^6.1.2",
     "@codemirror/language": "^6.12.1",
+    "@codemirror/legacy-modes": "^6.5.2",
     "@codemirror/state": "^6.5.3",
     "@codemirror/view": "^6.39.9",
     "@lezer/highlight": "^1.2.3",
@@ -36,6 +51,7 @@
     "clsx": "^2.1.0",
     "codemirror-lang-typst": "^0.4.0",
     "dompurify": "^3.3.1",
+    "highlight.js": "^11.11.1",
     "html-to-image": "^1.11.13",
     "katex": "^0.16.27",
     "lucide-react": "^0.300.0",
