--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mermaid": "^11.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.1.9",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
