feat: integrate FullCalendar for schedule management

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "@codemirror/state": "^6.5.3",
     "@codemirror/view": "^6.39.9",
     "@excalidraw/excalidraw": "^0.18.0",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/list": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
+    "@fullcalendar/timegrid": "^6.1.20",
     "@lezer/highlight": "^1.2.3",
     "@milkdown/core": "^7.3.0",
     "@milkdown/ctx": "^7.3.0",
