--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "@uiw/react-codemirror": "^4.25.4",
     "clsx": "^2.1.0",
     "codemirror-lang-typst": "^0.4.0",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
+    "goober": "^2.1.18",
     "highlight.js": "^11.11.1",
     "html-to-image": "^1.11.13",
     "katex": "^0.16.27",
@@ -64,8 +66,11 @@
     "mermaid": "^11.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.37.0",
     "react-resizable-panels": "^2.1.9",
-    "tailwind-merge": "^2.2.0"
+    "solid-js": "^1.9.10",
+    "tailwind-merge": "^2.2.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
@@ -75,6 +80,7 @@
     "@types/node": "^20.19.30",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
